--- a/ParallelScan/ParallelScan.csproj
+++ b/ParallelScan/ParallelScan.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Info\Attribute.cs" />
     <Compile Include="Info\FileTaskInfo.cs" />
     <Compile Include="TaskCoordinator\ITaskEvents.cs" />
+    <Compile Include="TaskCoordinator\ScanCoordinator.cs" />
     <Compile Include="TaskCoordinator\TaskCoordinator.cs" />
     <Compile Include="TaskProcessors\FileInfoTaskProcessor.cs" />
     <Compile Include="TaskProcessors\TreeWriterInfoTaskProcessor.cs" />
