--- a/ParallelScan/ParallelScan.csproj
+++ b/ParallelScan/ParallelScan.csproj
@@ -54,7 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Info\Attribute.cs" />
+    <Compile Include="Info\InfoAttribute.cs" />
     <Compile Include="Info\FileTaskInfo.cs" />
     <Compile Include="TaskCoordinator\ITaskEvents.cs" />
     <Compile Include="TaskCoordinator\ScanCoordinator.cs" />
